<resources>
    <string name="app_name">Hello</string>
    <string name="dicanome">Informe o seu nome</string>
    <string name="perguntanome">Olá! Qual é o seu nome?</string>
    <string name="btnEnviarNome">Enviar dado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_sou_a_primeira_tela">hello sou a primeira tela</string>
    <string name="hello_sou_a_segunda_tela">hello sou a segunda tela</string>
    <string name="buttonListar">Listar</string>
    <string name="buttonCadastrar">Cadastrar</string>
    <string name="btCliente">Cliente</string>
    <string name="btProduto">Produto</string>
    <string name="btFornecedores">Fornecedor</string>
    <string name="btSair">Sair</string>
    <string name="nomeCliente">Informe o nome do Cliente</string>
    <string name="numeroCliente">Informe o número do Cliente</string>
    <string name="nomeProduto">Informe o nome do Produto</string>
    <string name="nomeMarca">Informe a marca do Produto</string>
    <string name="nomeFornecedor">Informe o nome do Fornecedor</string>
    <string name="numeroFornecedor">Informe o número do Fornecedor</string>
    <string name="btSalvarCliente">Salvar Dados</string>
</resources>